--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,8 +2,8 @@
 
 {% block title %}Home | {% endblock %}
 
+{% block page_header %}Valorant Agent Picker{% endblock %}
+
 {% block content %}
-    <h1>Valorant Agent Picker</h1>
-    <hr>
     <a href="find_your_agent"><button>Find Your Agent</button></a>
 {% endblock %}
