--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,6 +1,11 @@
+#page_title {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 35px;
+}
 body {
     height: 100vh;
     margin: 0;
+    font-size: 18px;
 }
 .container {
     display: flex;
@@ -8,9 +13,9 @@ body {
     align-items: center;
 }
 #home-button {
-    height: 70px;
-    width: 70px;
-    margin: 50px;
+    height: 50px;
+    width: 50px;
+    margin: 20px;
 }
 .label-and-input {
     display: block;
