--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>{% block title %}{% endblock %}Valorant Agent Picker</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    <title>{% block title %}{% endblock %}Valorant Agent Picker</title>
 </head>
 <body>
+    <h1 id="page_title">{% block page_header %}{% endblock %}</h1>
     <div class="container">
-        <h1 id="page_title">{% block page_header %}{% endblock %}</h1>
         {% block content %}
         {% endblock %}
-        <a href="/"><img id="home-button" src="{{ url_for('static', filename='Home.png') }}" title="Back to Home" alt="Back to Home"></a>
+        <a href="/"><img id="home-button" src="{{ url_for('static', filename='icons/Misc/Home.png') }}" title="Back to Home" alt="Back to Home"></a>
     </div>
 </body>
 </html>
