--- a/src/templates/display_results.html
+++ b/src/templates/display_results.html
@@ -5,5 +5,5 @@
 {% block page_header %}Result{% endblock %}
 
 {% block content %}
-<h4>Your Valorant agent is {{ agent }}!</h4>
+Your Valorant agent is {{ agent }}!
 {% endblock %}
