--- a/src/templates/find_agent.html
+++ b/src/templates/find_agent.html
@@ -10,19 +10,19 @@
         <label>Agent Type:</label>
         <input type="radio" name="Agent_Type" id="Duelist" value="Duelist" required>
         <label class="form-item-labels" for="Duelist">
-            <img class="form-icons" src="{{ url_for('static', filename='Duelist.png') }}" title="Duelist" alt="Duelist">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Agent_Type/Duelist.png') }}" title="Duelist" alt="Duelist">
         </label>
         <input type="radio" name="Agent_Type" id="Initiator" value="Initiator">
         <label class="form-item-labels" for="Initiator">
-            <img class="form-icons" src="{{ url_for('static', filename='Initiator.png') }}" title="Initiator" alt="Initiator">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Agent_Type/Initiator.png') }}" title="Initiator" alt="Initiator">
         </label>
         <input type="radio" name="Agent_Type" id="Controller" value="Controller">
         <label class="form-item-labels" for="Controller">
-            <img class="form-icons" src="{{ url_for('static', filename='Controller.png') }}" title="Controller" alt="Controller">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Agent_Type/Controller.png') }}" title="Controller" alt="Controller">
         </label>
         <input type="radio" name="Agent_Type" id="Sentinel" value="Sentinel">
         <label class="form-item-labels" for="Sentinel">
-            <img class="form-icons" src="{{ url_for('static', filename='Sentinel.png') }}" title="Sentinel" alt="Sentinel">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Agent_Type/Sentinel.png') }}" title="Sentinel" alt="Sentinel">
         </label>    
     </div>
 
@@ -30,23 +30,23 @@
         <label>Ability Preference:</label>
         <input type="radio" name="Ability_Preference" id="Flashes/Stuns" value="Flashes/Stuns" required>
         <label class="form-item-labels" for="Flashes/Stuns">
-            <img class="form-icons" src="{{ url_for('static', filename='FlashesStuns.png') }}" title="Flashes/Stuns" alt="Flashes/Stuns">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Ability_Preference/FlashesStuns.png') }}" title="Flashes/Stuns" alt="Flashes/Stuns">
         </label>
         <input type="radio" name="Ability_Preference" id="Smokes" value="Smokes">
         <label class="form-item-labels" for="Smokes">
-            <img class="form-icons" src="{{ url_for('static', filename='Smokes.png') }}" title="Smokes" alt="Smokes">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Ability_Preference/Smokes.png') }}" title="Smokes" alt="Smokes">
         </label>
         <input type="radio" name="Ability_Preference" id="Healing" value="Healing">
         <label class="form-item-labels" for="Healing">
-            <img class="form-icons" src="{{ url_for('static', filename='Healing.png') }}" title="Healing" alt="Healing">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Ability_Preference/Healing.png') }}" title="Healing" alt="Healing">
         </label>
         <input type="radio" name="Ability_Preference" id="Agility" value="Agility">
         <label class="form-item-labels" for="Agility">
-            <img class="form-icons" src="{{ url_for('static', filename='Agility.png') }}" title="Agility" alt="Agility">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Ability_Preference/Agility.png') }}" title="Agility" alt="Agility">
         </label>
         <input type="radio" name="Ability_Preference" id="Information" value="Information">
         <label class="form-item-labels" for="Information">
-            <img class="form-icons" src="{{ url_for('static', filename='Information.png') }}" title="Information" alt="Information">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Ability_Preference/Information.png') }}" title="Information" alt="Information">
         </label>
     </div>
 
@@ -54,23 +54,23 @@
         <label>Preferred Gun Type:</label>
         <input type="radio" name="Gun_Type" id="SMGs" value="SMGs" required>
         <label class="form-item-labels" for="SMGs">
-            <img class="form-icons" src="{{ url_for('static', filename='SMGs.avif') }}" title="SMGs" alt="SMGs">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Preferred_Gun_Type/SMGs.avif') }}" title="SMGs" alt="SMGs">
         </label>
         <input type="radio" name="Gun_Type" id="Shotguns" value="Shotguns">
         <label class="form-item-labels" for="Shotguns">
-            <img class="form-icons" src="{{ url_for('static', filename='Shotguns.jpg') }}" title="Shotguns" alt="Shotguns">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Preferred_Gun_Type/Shotguns.jpg') }}" title="Shotguns" alt="Shotguns">
         </label>
         <input type="radio" name="Gun_Type" id="Rifles" value="Rifles">
         <label class="form-item-labels" for="Rifles">
-            <img class="form-icons" src="{{ url_for('static', filename='Rifles.avif') }}" title="Rifles" alt="Rifles">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Preferred_Gun_Type/Rifles.avif') }}" title="Rifles" alt="Rifles">
         </label>
         <input type="radio" name="Gun_Type" id="Snipers" value="Snipers">
         <label class="form-item-labels" for="Snipers">
-            <img class="form-icons" src="{{ url_for('static', filename='Snipers.jpg') }}" title="Snipers" alt="Snipers">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Preferred_Gun_Type/Snipers.jpg') }}" title="Snipers" alt="Snipers">
         </label>
         <input type="radio" name="Gun_Type" id="Machine Guns" value="Machine Guns">
         <label class="form-item-labels" for="Machine Guns">
-            <img class="form-icons" src="{{ url_for('static', filename='Machine Guns.png') }}" title="Machine Guns" alt="Machine Guns">
+            <img class="form-icons" src="{{ url_for('static', filename='icons/Preferred_Gun_Type/Machine Guns.png') }}" title="Machine Guns" alt="Machine Guns">
         </label>
     </div>
 
